build/usd-sys/usd-c/include.in/pxr/usd/sdf/sdf_children_policies.h

typedef struct pxrInternal_v0_21__pxrReserved____TfToken_t_s pxrInternal_v0_21__pxrReserved____TfToken_t;
typedef pxrInternal_v0_21__pxrReserved____TfToken_t pxr_TfToken_t;
typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfPath_t_s pxrInternal_v0_21__pxrReserved____SdfPath_t;
typedef pxrInternal_v0_21__pxrReserved____SdfPath_t pxr_SdfPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_MapperChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_MapperChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_AttributeConnectionChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_AttributeConnectionChildPolicy_t;
typedef struct pxrInternal_v0_21__pxrReserved____Sdf_RelationshipTargetChildPolicy_t_s {
    char _unused;
} USD_CPPMM_ALIGN(1) pxrInternal_v0_21__pxrReserved____Sdf_RelationshipTargetChildPolicy_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PrimChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_PropertyChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperArgChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_ExpressionChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_GetFieldValue(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_GetChildPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * parentPath
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_VariantSetChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_MapperChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeConnectionChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeConnectionChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_AttributeConnectionChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipTargetChildPolicy_GetParentPath(
    pxr_SdfPath_t * * return_
    , pxr_SdfPath_t const * childPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipTargetChildPolicy_IsValidIdentifier(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Sdf_RelationshipTargetChildPolicy_GetChildrenToken(
    pxr_TfToken_t * return_
    , pxr_SdfPath_t const * parentPath);